Add more documentation